package com.example.apollotracker.model

enum class Currency(val code: String) {
    USD("USD"),
    GBP("GBP"),
    EUR("EUR")
}
