...
                Icon(Icons.Default.Refresh, contentDescription = "Refresh", tint = Color.White)
            }
        },
        content = { padding ->
            LazyColumn(
                modifier = Modifier
                    .testTag("AltcoinList")
                    .fillMaxSize()
                    .padding(0.dp)
            ) {
                itemsIndexed(altcoinInfo) { index, altCoin ->
                    AltCoinItem(altCoin, index, onAction)
                    Divider(color = Color.LightGray, thickness = 1.dp)
...
